@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.47 2018/12/13 19:52:25 adam Exp $
+# $NetBSD: Makefile,v 1.48 2019/03/23 02:37:42 manu Exp $
 
-DISTNAME=	mod_auth_mellon-0.14.0
+DISTNAME=	mod_auth_mellon-0.14.2
 PKGNAME=	${APACHE_PKG_PREFIX}-${DISTNAME:S/mod_//:S/_/-/g}
-PKGREVISION=	2
+#PKGREVISION=	1
 CATEGORIES=	www security
 MASTER_SITES=	${MASTER_SITE_GITHUB:=UNINETT/}/mod_auth_mellon/releases/download/v${DISTNAME:C/.*-//}/
 
