@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.1445 2019/03/23 00:21:23 ryoon Exp $
+$NetBSD: CHANGES-2019,v 1.1446 2019/03/23 02:37:41 manu Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -2331,3 +2331,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated editors/OmegaT to 4.1.5.04 [ryoon 2019-03-22]
 	Updated geography/qgis to 2.18.28 [ryoon 2019-03-22]
 	Updated math/fricas to 1.3.5 [ryoon 2019-03-23]
+	Updated www/ap2-auth-mellon to 0.14.2 [manu 2019-03-23]
